@@ -24,6 +24,8 @@ CHANGES IN CUPS V1.1.11
 	  when the job-quota-period attribute was set to 0.
 	- The LPDEST and PRINTER environment variables did not
 	  support printer instances.
+	- The text filter now handles more types of boldface and
+	  underline formatting.
 
 
 CHANGES IN CUPS V1.1.10-1
